...
            ElevatedButton(
              onPressed: () {
                ref.read(gameStateProvider.notifier).setGameState(GameState.playing);
                game.reset();
                context.go('/game');
              },
              child: const Text('START'),
            ),
            const SizedBox(height: 20),
            ElevatedButton(
              onPressed: () {
                context.go('/settings');
              },
              child: const Text('SETTINGS'),
            ),
            const SizedBox(height: 20),
            Text(
              'Highscore: ${ref.watch(persistenceServiceProvider).getHighScore()}',
              style: const TextStyle(
                fontSize: 20,
...
